// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Button as DecoyButton with options: small warning 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: darkorange;
  cursor: pointer;
  padding: 0.35em 0.5em;
  text-align: center;
  line-height: 1.25;
  color: #FFFFFF;
  touch-action: manipulation;
}

.c0:hover,
.c0:active {
  outline: none;
}

<div
  class="c0"
>
  DecoyButton
</div>
`;

exports[`renders Button with options: big danger 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: red;
  cursor: pointer;
  padding: 1em 1.75em;
  text-align: center;
  line-height: 1.25;
  color: #FFFFFF;
  font-size: 1.25em;
  touch-action: manipulation;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  type="button"
>
  I’m a big button!
</button>
`;

exports[`renders Button with options: full-width disabled submit 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: rgb(211,211,211);
  width: 100%;
  padding: 0.75em 1em;
  text-align: center;
  line-height: 1.25;
  color: rgb(160,160,160);
  touch-action: manipulation;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  disabled=""
  type="submit"
>
  Disabled Button
</button>
`;

exports[`renders Button with options: primary noFocus 1`] = `
.c0 {
  display: inline-block;
  border: none;
  border-radius: 0.25em;
  box-shadow: 0 0 0 0 rgba(71,167,75,1);
  box-sizing: border-box;
  background: rgb(71,167,75);
  cursor: pointer;
  padding: 0.75em 1em;
  text-align: center;
  line-height: 1.25;
  color: #FFFFFF;
  touch-action: manipulation;
}

.c0:focus {
  outline: none;
}

.c0:hover,
.c0:active {
  outline: none;
}

<button
  class="c0"
  type="button"
>
  Primary
</button>
`;
